--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -30,7 +30,7 @@
 
                 <div class="field">
 
-                    <input class="inp" type="email" name="emailid" required placeholder="Enter Your Username">
+                    <input class="inp" type="email" name="emailid" required placeholder="Enter Your Email">
                 </div>
 
 
